<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <include
        layout="@layout/common_top_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <ImageView
        android:id="@+id/iv_register_success"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/dp_138"
        android:src="@drawable/icon_register_success" />

    <TextView
        android:id="@+id/tv_register_success"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/iv_register_success"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/dp_16"
        android:text="@string/tv_register_success"
        android:textColor="@color/colorWhite"
        android:textSize="@dimen/sp_20" />

    <TextView
        android:id="@+id/tv_register_success_authen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_register_success"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/dp_32"
        android:paddingLeft="@dimen/dp_18"
        android:paddingRight="@dimen/dp_18"
        android:text="@string/tv_register_success_authen"
        android:textColor="@color/color_f1f1f1"
        android:textSize="@dimen/sp_16" />

    <Button
        android:id="@+id/btn_register_authen"
        android:layout_width="@dimen/dp_324"
        android:layout_height="@dimen/dp_45"
        android:text="@string/to_qualification"
        android:gravity="center"
        android:layout_marginTop="@dimen/dp_24"
        android:textColor="@color/colorWhite"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/tv_register_success_authen"
        android:background="@drawable/btn_radius_bg" />

    <Button
        android:id="@+id/btn_register_wait_authen"
        android:layout_width="@dimen/dp_324"
        android:layout_height="@dimen/dp_45"
        android:textColor="@color/text_gray"
        android:layout_below="@+id/btn_register_authen"
        android:layout_marginTop="@dimen/dp_16"
        android:gravity="center"
        android:layout_centerHorizontal="true"
        android:text="@string/tv_register_wait_authen"
        android:background="@drawable/btn_radius_bg_transparency" />
</RelativeLayout>