<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_login"
    android:orientation="vertical">

    <include
        android:id="@+id/i_title"
        layout="@layout/common_top_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/i_title"
        android:orientation="vertical"
        android:paddingLeft="24dp"
        android:paddingRight="24dp">

        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <com.tanker.loginmodule.widget.XmTankerEditText
            android:id="@+id/et_register_phone_num"
            style="@style/et_login_register_style"
            android:ellipsize="end"
            android:hint="@string/et_register_phone_num"
            android:inputType="phone"
            android:maxLength="11"
            android:paddingBottom="@dimen/dp_8"
            android:paddingTop="@dimen/dp_8"
            android:singleLine="true" />

        <include
            layout="@layout/common_login_send_code"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_70"
            android:layout_gravity="center_vertical"
            android:ellipsize="end"
            android:singleLine="true"
            android:visibility="visible" />

        <com.tanker.loginmodule.widget.PasswordToggleEditText
            android:id="@+id/et_register_pwd"
            style="@style/et_login_register_style"
            android:ellipsize="end"
            android:hint="@string/et_register_pwd"
            android:inputType="textPassword"
            android:maxLength="20"
            android:paddingBottom="@dimen/dp_8"
            android:paddingTop="@dimen/dp_8"
            android:singleLine="true" />

        <com.tanker.loginmodule.widget.PasswordToggleEditText
            android:id="@+id/et_register_comfire_pwd"
            style="@style/et_login_register_style"
            android:ellipsize="end"
            android:hint="@string/et_register_comfire_pwd"
            android:inputType="textPassword"
            android:maxLength="20"
            android:paddingBottom="@dimen/dp_8"
            android:paddingTop="@dimen/dp_8"
            android:singleLine="true" />


        <Button
            android:id="@+id/tv_register"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_45"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="27dp"
            android:background="@drawable/btn_radius_bg"
            android:gravity="center"
            android:text="@string/tv_register_next"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/sp_20" />

        <include
            android:id="@+id/common_read"
            layout="@layout/common_read_agreement"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="39dp"
            android:layout_marginTop="54dp" />

    </LinearLayout>
</RelativeLayout>